Fixed #21